# edge_grasp

./: .gitignore  CMakeLists.txt  Paper.docx  package.xml
data/: cloud.pcd  cloud1.pcd  cloud2.pcd
data/pcd/: cloud3.pcd  cloud4.pcd  cloud5.pcd  cloud6.pcd  cloud7.pcd  cloud8.pcd
launch/: edge_grasp.launch
model/: cnn  cnn3d
openrave/: environment_2.xml  shelf.kinbody.xml  table.kinbody.xml
rviz/: edge_grasp.rviz
script/: classifier3d_node.py  classifier_node.py  cloud_proxy.py  cnn.py  cnn3d.py  create_training_set.py  create_training_set_1.py  create_training_set_2.py  create_training_set_3.py  create_training_set_4.py  create_training_set_5.py  create_training_set_6.py  create_training_set_7.py  create_training_set_8.py  create_training_set_9.py  grasp.py  grasp_proxy.py  hand_descriptor.py  plot.py  point_cloud_util.py  rviz_node.py  simulation.py
