<?xml version="1.0"?>
<package>
  <name>edge_grasp</name>
  <version>0.0.0</version>
  <description>TODO</description>
  
  <maintainer email="wangdian1007@gmail.com">Dian Wang</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <export></export>
</package>
